--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -998,6 +998,8 @@
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "Grupper är för att organisera ditt team. De fungerar bäst när de är centrerade kring en funktion eller ett ansvar – Support eller teknik till exempel.",
   "You’ll be able to add people to the group next.": "Du kommer att kunna lägga till personer till gruppen nästa.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "Du kan redigera namnet på denna grupp när som helst, men att göra det alltför ofta kan förvirra dina kollegor.",
+  "Disable mentions": "Disable mentions",
+  "Prevent this group from being mentionable in documents or comments": "Prevent this group from being mentionable in documents or comments",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "Är du säker på det? Genom att ta bort <em>{{groupName}}</em> -gruppen kommer dess medlemmar att förlora åtkomst till samlingar och dokument som det är associerat med.",
   "Add people to {{groupName}}": "Lägg till personer i {{groupName}}",
   "{{userName}} was removed from the group": "{{userName}} togs bort från gruppen",
