--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -998,6 +998,8 @@
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "Gruplar takımınızı organize etmek içindir. Bir işlev veya sorumluluk etrafında toplandığında en iyi şekilde çalışırlar - örneğin Destek veya Mühendislik.",
   "You’ll be able to add people to the group next.": "Daha sonra gruba kişi ekleyebileceksiniz.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "Bu grubun adını istediğiniz zaman düzenleyebilirsiniz, ancak bunu çok sık yapmak takım arkadaşlarınızın kafasını karıştırabilir.",
+  "Disable mentions": "Disable mentions",
+  "Prevent this group from being mentionable in documents or comments": "Prevent this group from being mentionable in documents or comments",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "Bundan emin misiniz? <em>{{groupName}}</em> grubunu silmek, üyelerinin ilişkili olduğu koleksiyonlara ve belgelere erişimini kaybetmesine neden olur.",
   "Add people to {{groupName}}": "{{groupName}} grubuna kişi ekle",
   "{{userName}} was removed from the group": "{{userName}} gruptan çıkarıldı",
