--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -998,6 +998,8 @@
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "Grupos são para organizar sua equipe. Eles funcionam melhor quando centrados em uma função ou responsabilidade - Suporte ou Engenharia, por exemplo.",
   "You’ll be able to add people to the group next.": "Você poderá adicionar pessoas ao grupo em seguida.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "Você pode editar o nome deste grupo a qualquer momento; no entanto, fazer isso com muita frequência pode confundir os seus colegas de equipe.",
+  "Disable mentions": "Disable mentions",
+  "Prevent this group from being mentionable in documents or comments": "Prevent this group from being mentionable in documents or comments",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "Você tem certeza disso? Excluir o grupo <em>{{groupName}}</em> fará com que seus membros percam o acesso a coleções e documentos associados.",
   "Add people to {{groupName}}": "Adicionar pessoas a {{groupName}}",
   "{{userName}} was removed from the group": "{{userName}} foi removido do grupo",
