--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -998,6 +998,8 @@
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "گروه‌ها برای سازمان‌دهی تیم شما هستند. بهترین حالت ایجاد گروه‌ها برای هر کارکرد یا مسئولیت است - برای نمونه «پشتیبانی» یا «مهندسی».",
   "You’ll be able to add people to the group next.": "در ادامه می‌توانید افراد را به گروه اضافه کنید.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "همیشه می‌توانید نام گروه را ویرایش نمایید، ولی این کار ممکن است باعث ابهام هم‌تیمی‌هایتان شود.",
+  "Disable mentions": "Disable mentions",
+  "Prevent this group from being mentionable in documents or comments": "Prevent this group from being mentionable in documents or comments",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "آیا از این اقدام مطمئن هستید؟ حذف گروه <em>{{groupName}}</em> باعث می‌شود اعضای آن دسترسی خود به مجموعه‌ها و سندهای گروه را از دست بدهند.",
   "Add people to {{groupName}}": "افزودن افراد به {{groupName}}",
   "{{userName}} was removed from the group": "{{userName}} از گروه حذف شد",
