fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -483,7 +483,7 @@
   "Profile picture": "Profielfoto",
   "Create a new doc": "Maak een nieuw document",
   "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} wordt niet verwittigd omdat ze geen toegang hebben tot dit document",
-  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Members of \"{{ groupName }}\" that have access to this document will be notified",
+  "Members of \"{{ groupName }}\" that have access to this document will be notified": "Leden van \"{{ groupName }}\" die toegang hebben tot dit document worden op de hoogte gebracht",
   "Keep as link": "Behoud als link",
   "Mention": "Vermelding",
   "Embed": "Insluiten",
@@ -507,7 +507,7 @@
   "Code": "Code",
   "Comment": "Reageer",
   "Create link": "Link maken",
-  "Edit image URL": "Edit image URL",
+  "Edit image URL": "Afbeeldingslink bewerken",
   "Sorry, an error occurred creating the link": "Sorry, er is een fout opgetreden bij het maken van de link",
   "Create a new child doc": "Maak een nieuw subdocument",
   "Delete table": "Tabel verwijderen",
@@ -573,7 +573,7 @@
   "Video": "Video",
   "None": "Geen",
   "Delete embed": "Insluiting verwijderen",
-  "Upload an image": "Upload an image",
+  "Upload an image": "Afbeelding uploaden",
   "Could not import file": "Kon bestand niet importeren",
   "Unsubscribed from document": "Afgemeld voor document",
   "Unsubscribed from collection": "Afgemeld voor collectie",
@@ -629,7 +629,7 @@
   "edited": "gewijzigd",
   "created the collection": "maakte de collectie",
   "mentioned you in": "vermeldde je in",
-  "mentioned your group in": "mentioned your group in",
+  "mentioned your group in": "noemde je groep in",
   "left a comment on": "liet een reactie achter op",
   "resolved a comment on": "heeft een reactie opgelost op",
   "reacted {{ emoji }} to your comment on": "reageerde met {{ emoji }} op jouw reactie op",
@@ -998,8 +998,8 @@
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "Groepen zijn voor het organiseren van je team. Ze werken het beste als ze zijn gebaseerd op een functie of verantwoordelijkheid, bijv. Ondersteuning of Ontwikkeling.",
   "You’ll be able to add people to the group next.": "Je kunt hierna personen aan de groep toevoegen.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "Wijzig de groepsnaam wanneer nodig, maar voorkom verwarring door dit niet te vaak te doen.",
-  "Disable mentions": "Disable mentions",
-  "Prevent this group from being mentionable in documents or comments": "Prevent this group from being mentionable in documents or comments",
+  "Disable mentions": "Vermeldingen uitschakelen",
+  "Prevent this group from being mentionable in documents or comments": "Voorkomen dat deze groep genoemd kan worden in documenten of commentaren",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "Weet je dat zeker? Bij het verwijderen van de groep <em>{{groupName}}</em> verliezen de leden van de groep de toegang tot de verzamelingen en documenten van de groep.",
   "Add people to {{groupName}}": "Personen toevoegen aan {{groupName}}",
   "{{userName}} was removed from the group": "{{userName}} is verwijderd uit de groep",
@@ -1020,7 +1020,7 @@
   "Member": "Gebruiker",
   "Admins": "Beheerders",
   "Date created": "Aanmaakdatum",
-  "Crop Image": "Crop Image",
+  "Crop Image": "Afbeelding bijsnijden",
   "Crop image": "Afbeelding bijsnijden",
   "How does this work?": "Hoe werkt dit?",
   "You can import a zip file that was previously exported from the JSON option in another instance. In {{ appName }}, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Je kunt een zipbestand importeren dat eerder is geëxporteerd vanuit de JSON-optie in een andere instantie. In {{ appName }}, open <em>Exporteren</em> in de zijbalk in Voorkeuren en klik op <em>Exporteer gegevens</em>.",
@@ -1079,7 +1079,7 @@
   "Choose a subdomain to enable a login page just for your team.": "Kies een subdomein om een inlogpagina alleen voor jouw team in te schakelen.",
   "This is the screen that workspace members will first see when they sign in.": "Dit is het eerste scherm dat deelnemers van de werkruimte zien wanneer ze inloggen.",
   "Danger": "Gevaar",
-  "You can delete this entire workspace including collections, documents, and users.": "You can delete this entire workspace including collections, documents, and users.",
+  "You can delete this entire workspace including collections, documents, and users.": "Je kunt deze hele werkruimte verwijderen inclusief collecties, documenten en gebruikers.",
   "Export data": "Exporteer gegevens",
   "A full export might take some time, consider exporting a single document or collection. You may leave this page once the export has started – if you have notifications enabled, we will email a link to <em>{{ userEmail }}</em> when it’s complete.": "Een volledige export kan even duren, overweeg om één document of collectie te exporteren. Je kunt deze pagina verlaten zodra de export is gestart - als je meldingen hebt ingeschakeld ontvang je een link naar <em>{{ userEmail }}</em> als het voltooid is.",
   "Recent exports": "Recente exporten",
@@ -1096,7 +1096,7 @@
   "Import data": "Importeer data",
   "Import a JSON data file exported from another {{ appName }} instance": "Importeer een JSON-gegevensbestand dat is geëxporteerd uit een andere {{ appName }} instantie",
   "Import pages from a Confluence instance": "Pagina's importeren van een Confluence instantie",
-  "Enterprise": "Enterprise",
+  "Enterprise": "Zakelijk",
   "Quickly transfer your existing documents, pages, and files from other tools and services into {{appName}}. You can also drag and drop any HTML, Markdown, and text documents directly into Collections in the app.": "Zet snel je bestaande documenten, pagina's en bestanden van andere tools en services over naar {{appName}}. Je kunt HTML-, Markdown- en tekstdocumenten ook rechtstreeks naar Collecties in de app slepen.",
   "Recent imports": "Recent geïmporteerd",
   "Configure a variety of integrations with third-party services.": "Een verscheidenheid van integraties met externe diensten configureren.",
@@ -1109,8 +1109,8 @@
   "Receive a notification when a document you are subscribed to or a thread you participated in receives a comment": "Ontvang een melding wanneer een document waarop je geabonneerd bent, of een thread waaraan je hebt deelgenomen, een opmerking ontvangt",
   "Mentioned": "Vermeld",
   "Receive a notification when someone mentions you in a document or comment": "Ontvang een melding wanneer iemand je vermeldt in een document of opmerking",
-  "Group mentions": "Group mentions",
-  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Receive a notification when someone mentions a group you are a member of in a document or comment",
+  "Group mentions": "Groepsvermeldingen",
+  "Receive a notification when someone mentions a group you are a member of in a document or comment": "Ontvang een melding wanneer iemand een groep noemt waarvan je deelnemer bent in een document of reactie",
   "Receive a notification when a comment thread you were involved in is resolved": "Ontvang een melding wanneer een reactie waar je bij betrokken was is opgelost",
   "Reaction added": "Reactie toegevoegd",
   "Receive a notification when someone reacts to your comment": "Ontvang een melding wanneer iemand reageert op jouw reactie",
@@ -1213,53 +1213,53 @@
   "Expires today": "Verloopt vandaag",
   "Expires tomorrow": "Verloopt morgen",
   "Expires {{ date }}": "Verlopen {{ date }}",
-  "New attribute": "New attribute",
-  "Paper size": "Paper size",
-  "Ask AI \"{{question}}\"": "Ask AI \"{{question}}\"",
-  "Are you sure you want to delete?": "Are you sure you want to delete?",
-  "Deleting this version of the document will permanently and irrevocably remove it from the history.": "Deleting this version of the document will permanently and irrevocably remove it from the history.",
-  "Format": "Format",
-  "Add option": "Add option",
-  "Optional": "Optional",
-  "Choose a size for your exported document": "Choose a size for your exported document",
-  "Revision renamed": "Revision renamed",
-  "Failed to save revision": "Failed to save revision",
-  "Invite to document": "Invite to document",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
-  "Data Attributes": "Data Attributes",
-  "Edit attribute": "Edit attribute",
-  "Property": "Property",
-  "Yes": "Yes",
-  "No": "No",
-  "Search or ask a question": "Search or ask a question",
-  "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.": "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.",
-  "Can view only what is explicitly shared": "Can view only what is explicitly shared",
-  "SAML assertion was invalid or missing fields, please check your configuration": "SAML assertion was invalid or missing fields, please check your configuration",
-  "AI generated answer based on related documents in your workspace": "AI generated answer based on related documents in your workspace",
-  "References": "References",
-  "Enable AI answers to get direct answers to searched questions.": "Enable AI answers to get direct answers to searched questions.",
-  "Go to settings": "Go to settings",
-  "Where do I find the file?": "Where do I find the file?",
+  "New attribute": "Nieuw kenmerk",
+  "Paper size": "Papierformaat",
+  "Ask AI \"{{question}}\"": "Vraag AI \"{{question}}\"",
+  "Are you sure you want to delete?": "Weet je zeker dat je wilt verwijderen?",
+  "Deleting this version of the document will permanently and irrevocably remove it from the history.": "Het verwijderen van deze versie van het document zal het definitief uit de geschiedenis verwijderen.",
+  "Format": "Formaat",
+  "Add option": "Optie toevoegen",
+  "Optional": "Optioneel",
+  "Choose a size for your exported document": "Kies een formaat voor het geëxporteerde document",
+  "Revision renamed": "Revisie genoemd",
+  "Failed to save revision": "Opslaan van revisie is mislukt",
+  "Invite to document": "Uitnodigen voor document",
+  "Sorry, invalid embed link": "Sorry, ongeldige insluitingslink",
+  "Data Attributes": "Gegevens kenmerken",
+  "Edit attribute": "Kenmerken bewerken",
+  "Property": "Eigenschap",
+  "Yes": "Ja",
+  "No": "Nee",
+  "Search or ask a question": "Zoek of stel een vraag",
+  "Invited {{roleName}} will not receive access to any collections or documents unless explicitly shared.": "Uitgenodigde {{roleName}} krijgt geen toegang tot alle verzamelingen of documenten, tenzij dit expliciet wordt gedeeld.",
+  "Can view only what is explicitly shared": "Kan alleen zien wat expliciet wordt gedeeld",
+  "SAML assertion was invalid or missing fields, please check your configuration": "SAML-bewering was ongeldig of ontbrekende velden, controleer je configuratie",
+  "AI generated answer based on related documents in your workspace": "AI gegenereerd antwoord op basis van gerelateerde documenten in je werkruimte",
+  "References": "Referenties",
+  "Enable AI answers to get direct answers to searched questions.": "Schakel AI antwoorden in om directe antwoorden te krijgen op gezochte vragen.",
+  "Go to settings": "Ga naar instellingen",
+  "Where do I find the file?": "Waar vind ik dit bestand?",
   "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.": "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.",
   "Drag and drop the zip file from Confluence's HTML export option, or click to upload": "Drag and drop the zip file from Confluence's HTML export option, or click to upload",
-  "Guests": "Guests",
-  "New Attribute": "New Attribute",
+  "Guests": "Gasten",
+  "New Attribute": "Nieuw kenmerk",
   "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.": "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.",
-  "Custom domain": "Custom domain",
-  "AI answers": "AI answers",
-  "Use AI to directly answer searched questions using content in your workspace.": "Use AI to directly answer searched questions using content in your workspace.",
-  "API access": "API access",
-  "Allow members to create API keys for programmatic access": "Allow members to create API keys for programmatic access",
-  "Public document embedding": "Public document embedding",
-  "When enabled, publicly shared documents can be embedded in third-party websites": "When enabled, publicly shared documents can be embedded in third-party websites",
-  "Include previews in emails": "Include previews in emails",
-  "When enabled, email notifications will include content previews": "When enabled, email notifications will include content previews",
-  "Boolean": "Boolean",
-  "Number": "Number",
-  "Text": "Text",
-  "List": "List",
-  "Could not load events": "Could not load events",
-  "Audit Log": "Audit Log",
+  "Custom domain": "Aangepast domein",
+  "AI answers": "AI antwoorden",
+  "Use AI to directly answer searched questions using content in your workspace.": "Gebruik AI om gezochte vragen direct te beantwoorden met behulp van inhoud in je werkruimte.",
+  "API access": "API-toegang",
+  "Allow members to create API keys for programmatic access": "Leden toestaan om API-sleutels te maken voor programmatische toegang",
+  "Public document embedding": "Openbare documenten insluiten",
+  "When enabled, publicly shared documents can be embedded in third-party websites": "Wanneer ingeschakeld, kunnen openbare gedeelde documenten worden ingesloten in websites van derden",
+  "Include previews in emails": "Voorvertoningen opnemen in e-mails",
+  "When enabled, email notifications will include content previews": "Wanneer ingeschakeld, zullen e-mailmeldingen voorbeelden van inhoud bevatten",
+  "Boolean": "Boolen (waar/onwaar)",
+  "Number": "Nummer",
+  "Text": "Tekst",
+  "List": "Lijst",
+  "Could not load events": "Kan gebeurtenissen niet laden",
+  "Audit Log": "Controlelogboek",
   "The audit log details the history of security related and other events across your knowledge base.": "The audit log details the history of security related and other events across your knowledge base.",
   "IP address": "IP address",
   "Actor": "Actor",
