--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -113,6 +113,8 @@
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Apply template": "Apply template",
+  "Add emoji": "Add emoji",
+  "Add custom emoji": "Add custom emoji",
   "Disconnect analytics": "Disconnect analytics",
   "Home": "Home",
   "Drafts": "Drafts",
@@ -256,6 +258,18 @@
   "Currently editing": "Currently editing",
   "Currently viewing": "Currently viewing",
   "Viewed {{ timeAgo }}": "Viewed {{ timeAgo }}",
+  "Please enter a name for the emoji": "Please enter a name for the emoji",
+  "Please select an image file": "Please select an image file",
+  "Emoji created successfully": "Emoji created successfully",
+  "Failed to create emoji": "Failed to create emoji",
+  "Uploading": "Uploading",
+  "Upload an image to create a custom emoji. The name should be unique and contain only lowercase letters, numbers, and underscores.": "Upload an image to create a custom emoji. The name should be unique and contain only lowercase letters, numbers, and underscores.",
+  "Emoji name": "Emoji name",
+  "Click or drag to replace": "Click or drag to replace",
+  "Drop the image here": "Drop the image here",
+  "Click or drag an image here": "Click or drag an image here",
+  "PNG, JPG, GIF, or WebP up to 1MB": "PNG, JPG, GIF, or WebP up to 1MB",
+  "This emoji will be available as": "This emoji will be available as",
   "Module failed to load": "Module failed to load",
   "Loading Failed": "Loading Failed",
   "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.": "Sorry, part of the application failed to load. This may be because it was updated since you opened the tab or because of a failed network request. Please try reloading.",
@@ -302,6 +316,8 @@
   "Icon Picker": "Icon Picker",
   "Icons": "Icons",
   "Emojis": "Emojis",
+  "Custom Emojis": "Custom Emojis",
+  "Custom": "Custom",
   "Remove": "Remove",
   "All": "All",
   "Frequently Used": "Frequently Used",
@@ -647,7 +663,6 @@
   "30 days": "30 days",
   "60 days": "60 days",
   "90 days": "90 days",
-  "Custom": "Custom",
   "No expiration": "No expiration",
   "The document archive is empty at the moment.": "The document archive is empty at the moment.",
   "Drop documents to import": "Drop documents to import",
@@ -984,8 +999,9 @@
   "Your import is being processed, you can safely leave this page": "Your import is being processed, you can safely leave this page",
   "File not supported – please upload a valid ZIP file": "File not supported – please upload a valid ZIP file",
   "Set the default permission level for collections created from the import": "Set the default permission level for collections created from the import",
-  "Uploading": "Uploading",
   "Start import": "Start import",
+  "Added by": "Added by",
+  "Date added": "Date added",
   "Processing": "Processing",
   "Expired": "Expired",
   "Completed": "Completed",
@@ -1055,6 +1071,8 @@
   "Editors": "Editors",
   "All status": "All status",
   "Active": "Active",
+  "Could not load emojis": "Could not load emojis",
+  "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
   "Settings saved": "Settings saved",
