fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -1240,11 +1240,11 @@
   "Enable AI answers to get direct answers to searched questions.": "Schakel AI antwoorden in om directe antwoorden te krijgen op gezochte vragen.",
   "Go to settings": "Ga naar instellingen",
   "Where do I find the file?": "Waar vind ik dit bestand?",
-  "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.": "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.",
-  "Drag and drop the zip file from Confluence's HTML export option, or click to upload": "Drag and drop the zip file from Confluence's HTML export option, or click to upload",
+  "In a Confluence space, navigate to <em>Space Settings -> Manage space -> Export space</em> and choose to export as HTML with the \"Normal Export\" option.": "In een Confluence ruimte. Navigeer naar <em>Space Settings -> Beheer ruimte -> Exporteer ruimte</em> en kies om te exporteren als HTML met de \"Normale Export\" optie.",
+  "Drag and drop the zip file from Confluence's HTML export option, or click to upload": "Sleep het zip-bestand afkomstig van de Confluence optie HTML-export, of klik om te uploaden",
   "Guests": "Gasten",
   "New Attribute": "Nieuw kenmerk",
-  "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.": "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.",
+  "Attributes allow you to define data to be stored with your documents. They can be used to store custom properties, metadata, or any other structured information that is common across documents.": "Met Attributen kunt u gegevens definiëren die met uw documenten moeten worden opgeslagen. Ze kunnen worden gebruikt voor het opslaan van aangepaste eigendommen, metaata, of andere gestructureerde informatie die in verschillende documenten gebruikelijk is.",
   "Custom domain": "Aangepast domein",
   "AI answers": "AI antwoorden",
   "Use AI to directly answer searched questions using content in your workspace.": "Gebruik AI om gezochte vragen direct te beantwoorden met behulp van inhoud in je werkruimte.",
@@ -1260,29 +1260,29 @@
   "List": "Lijst",
   "Could not load events": "Kan gebeurtenissen niet laden",
   "Audit Log": "Controlelogboek",
-  "The audit log details the history of security related and other events across your knowledge base.": "The audit log details the history of security related and other events across your knowledge base.",
-  "IP address": "IP address",
-  "Actor": "Actor",
-  "Event": "Event",
-  "Timestamp": "Timestamp",
+  "The audit log details the history of security related and other events across your knowledge base.": "Het auditlogboek bevat de geschiedenis van de beveiliging gerelateerde en andere gebeurtenissen in je kennisbasis.",
+  "IP address": "IP-adres",
+  "Actor": "Acteur",
+  "Event": "Gebeurtenis",
+  "Timestamp": "Tijdstempel",
   "IP": "IP",
-  "a group": "a group",
-  "All users": "All users",
-  "Private": "Private",
-  "View and edit": "View and edit",
-  "Sharing enabled": "Sharing enabled",
-  "Date archived": "Date archived",
-  "Could not load collections": "Could not load collections",
-  "Manage the permissions and settings of all collections in the knowledge base. As a workspace admin you can also administer private collections.": "Manage the permissions and settings of all collections in the knowledge base. As a workspace admin you can also administer private collections.",
-  "Automatically index and search document content from {{appName}} inside <4>Glean</4> in realtime.": "Automatically index and search document content from {{appName}} inside <4>Glean</4> in realtime.",
-  "API Endpoint": "API Endpoint",
-  "API Secret": "API Secret",
-  "Datasource": "Datasource",
-  "Details of the current {{appName}} license. To arrange contract renewal as expiry or seat limits approach or increase licensed seats please contact your account manager or email <4>priority@getoutline.com</4>.": "Details of the current {{appName}} license. To arrange contract renewal as expiry or seat limits approach or increase licensed seats please contact your account manager or email <4>priority@getoutline.com</4>.",
-  "Sorry, an answer could not be found in the collection, try widening your search.": "Sorry, an answer could not be found in the collection, try widening your search.",
-  "Sorry, an answer could not be found in the workspace, try widening your search.": "Sorry, an answer could not be found in the workspace, try widening your search.",
-  "Looking for answers": "Looking for answers",
-  "Answer to \"{{ query }}\"": "Answer to \"{{ query }}\"",
+  "a group": "een groep",
+  "All users": "Alle gebruikers",
+  "Private": "Privé",
+  "View and edit": "Weergeven en bewerken",
+  "Sharing enabled": "Delen ingeschakeld",
+  "Date archived": "Datum gearchiveerd",
+  "Could not load collections": "Kon collecties niet laden",
+  "Manage the permissions and settings of all collections in the knowledge base. As a workspace admin you can also administer private collections.": "Beheer de rechten en instellingen van alle collecties in de kennisbasis. Als beheerder van de werkruimte kunt u ook privécollecties beheren.",
+  "Automatically index and search document content from {{appName}} inside <4>Glean</4> in realtime.": "Documentinhoud van {{appName}} automatisch in realtime indexeren en doorzoeken binnen <4>Glean</4>.",
+  "API Endpoint": "API-eindpunt",
+  "API Secret": "API-geheim",
+  "Datasource": "Gegevensbron",
+  "Details of the current {{appName}} license. To arrange contract renewal as expiry or seat limits approach or increase licensed seats please contact your account manager or email <4>priority@getoutline.com</4>.": "Details van de huidige {{appName}} -licentie. Om contractverlenging te regelen nu de vervaldatum of de gebruikerslimiet naderen of het aantal toegestane gebruikers te verhogen, kunt u contact opnemen met uw accountmanager <4>priority@getoutline.com</4>.",
+  "Sorry, an answer could not be found in the collection, try widening your search.": "Sorry, er is geen antwoord gevonden in de collectie, probeer je zoekopdracht uit te breiden.",
+  "Sorry, an answer could not be found in the workspace, try widening your search.": "Sorry, een antwoord kon niet worden gevonden in de werkruimte, probeer je zoekopdracht uit te breiden.",
+  "Looking for answers": "Op zoek naar antwoorden",
+  "Answer to \"{{ query }}\"": "Antwoord op \"{{ query }}\"",
   "Whoops, you need to accept the permissions in GitHub to connect {{appName}} to your workspace. Try again?": "Oeps, je moet de machtigingen in GitHub accepteren om {{appName}} te verbinden met je werkruimte. Opnieuw proberen?",
   "Something went wrong while authenticating your request. Please try logging in again.": "Er is iets misgegaan bij het authenticeren van je verzoek. Probeer opnieuw aan te melden.",
   "The owner of GitHub account has been requested to install the {{githubAppName}} GitHub app. Once approved, previews will be shown for respective links.": "De eigenaar van het GitHub account is verzocht om de {{githubAppName}} GitHub app te installeren. Eenmaal goedgekeurd, zullen de previews getoond worden voor de betreffende links.",
